public/mp1_handout/src/cool.y.output
Terminals unused in grammar

    ERROR


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list_star '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list_star '}' ';'

    6 feature_list_star: ε
    7                  | feature_list_star feature_single ';'

    8 feature_single: OBJECTID '(' ')' ':' TYPEID '{' expression_single '}'
    9               | OBJECTID '(' formal_single formal_list_star ')' ':' TYPEID '{' expression_single '}'
   10               | OBJECTID ':' TYPEID
   11               | OBJECTID ':' TYPEID ASSIGN expression_single

   12 formal_list_star: ε
   13                 | formal_list_star ',' formal_single

   14 formal_single: OBJECTID ':' TYPEID

   15 case_list_pos: case_single ';'
   16              | case_list_pos case_single ';'

   17 case_single: OBJECTID ':' TYPEID DARROW expression_single

   18 let_expand: IN expression_single
   19           | ',' OBJECTID ':' TYPEID let_expand
   20           | ',' OBJECTID ':' TYPEID ASSIGN expression_single let_expand

   21 let_begin: LET OBJECTID ':' TYPEID let_expand
   22          | LET OBJECTID ':' TYPEID ASSIGN expression_single let_expand

   23 for_second: ';' expression_single ';' expression_single ')' '{' expression_single '}'

   24 for_expand: for_second
   25           | ',' OBJECTID ':' TYPEID for_expand
   26           | ',' OBJECTID ':' TYPEID ASSIGN expression_single for_expand

   27 for_begin: FOR '(' OBJECTID ':' TYPEID for_expand
   28          | FOR '(' OBJECTID ':' TYPEID ASSIGN expression_single for_expand

   29 expression_list_star: ε
   30                     | expression_list_star ',' expression_single

   31 expression_list_pos: expression_single ';'
   32                    | expression_list_pos expression_single ';'

   33 expression_single: OBJECTID ASSIGN expression_single
   34                  | expression_single '.' OBJECTID '(' ')'
   35                  | expression_single '.' OBJECTID '(' expression_single expression_list_star ')'
   36                  | expression_single '@' TYPEID '.' OBJECTID '(' ')'
   37                  | expression_single '@' TYPEID '.' OBJECTID '(' expression_single expression_list_star ')'
   38                  | OBJECTID '(' ')'
   39                  | OBJECTID '(' expression_single expression_list_star ')'
   40                  | IF expression_single THEN expression_single ELSE expression_single FI
   41                  | WHILE expression_single LOOP expression_single POOL
   42                  | '{' expression_list_pos '}'
   43                  | let_begin
   44                  | for_begin
   45                  | CASE expression_single OF case_list_pos ESAC
   46                  | NEW TYPEID
   47                  | ISVOID expression_single
   48                  | expression_single '+' expression_single
   49                  | expression_single '-' expression_single
   50                  | expression_single '*' expression_single
   51                  | expression_single '/' expression_single
   52                  | '~' expression_single
   53                  | expression_single '<' expression_single
   54                  | expression_single LE expression_single
   55                  | expression_single '=' expression_single
   56                  | NOT expression_single
   57                  | '(' expression_single ')'
   58                  | OBJECTID
   59                  | INT_CONST
   60                  | STR_CONST
   61                  | BOOL_CONST


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 8 9 27 28 34 35 36 37 38 39 57
    ')' (41) 8 9 23 34 35 36 37 38 39 57
    '*' (42) 50
    '+' (43) 48
    ',' (44) 13 19 20 25 26 30
    '-' (45) 49
    '.' (46) 34 35 36 37
    '/' (47) 51
    ':' (58) 8 9 10 11 14 17 19 20 21 22 25 26 27 28
    ';' (59) 4 5 7 15 16 23 31 32
    '<' (60) 53
    '=' (61) 55
    '@' (64) 36 37
    '{' (123) 4 5 8 9 23 42
    '}' (125) 4 5 8 9 23 42
    '~' (126) 52
    error (256)
    CLASS (258) 4 5
    ELSE (259) 40
    FI (260) 40
    IF (261) 40
    IN (262) 18
    INHERITS (263) 5
    LET (264) 21 22
    LOOP (265) 41
    POOL (266) 41
    THEN (267) 40
    WHILE (268) 41
    CASE (269) 45
    ESAC (270) 45
    OF (271) 45
    DARROW (272) 17
    NEW (273) 46
    ISVOID (274) 47
    STR_CONST <symbol> (275) 60
    INT_CONST <symbol> (276) 59
    BOOL_CONST <boolean> (277) 61
    TYPEID <symbol> (278) 4 5 8 9 10 11 14 17 19 20 21 22 25 26 27 28 36 37 46
    OBJECTID <symbol> (279) 8 9 10 11 14 17 19 20 21 22 25 26 27 28 33 34 35 36 37 38 39 58
    ASSIGN (280) 11 20 22 26 28 33
    NOT (281) 56
    LE (282) 54
    FOR (283) 27 28
    ERROR (284)
    prec_let_expand (286)


Nonterminals, with rules where they appear

    $accept (47)
        on left: 0
    program <program> (48)
        on left: 1
        on right: 0
    class_list <classes> (49)
        on left: 2 3
        on right: 1 3
    class <class_> (50)
        on left: 4 5
        on right: 2 3
    feature_list_star <features> (51)
        on left: 6 7
        on right: 4 5 7
    feature_single <feature> (52)
        on left: 8 9 10 11
        on right: 7
    formal_list_star <formals> (53)
        on left: 12 13
        on right: 9 13
    formal_single <formal> (54)
        on left: 14
        on right: 9 13
    case_list_pos <cases> (55)
        on left: 15 16
        on right: 16 45
    case_single <case_> (56)
        on left: 17
        on right: 15 16
    let_expand <expression> (57)
        on left: 18 19 20
        on right: 19 20 21 22
    let_begin <expression> (58)
        on left: 21 22
        on right: 43
    for_second <expression> (59)
        on left: 23
        on right: 24
    for_expand <expression> (60)
        on left: 24 25 26
        on right: 25 26 27 28
    for_begin <expression> (61)
        on left: 27 28
        on right: 44
    expression_list_star <expressions> (62)
        on left: 29 30
        on right: 30 35 37 39
    expression_list_pos <expressions> (63)
        on left: 31 32
        on right: 32 42
    expression_single <expression> (64)
        on left: 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61
        on right: 8 9 11 17 18 20 22 23 26 28 30 31 32 33 34 35 36 37 39 40 41 45 47 48 49 50 51 52 53 54 55 56 57


State 0

    0 $accept: • program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    4 class: CLASS • TYPEID '{' feature_list_star '}' ';'
    5      | CLASS • TYPEID INHERITS TYPEID '{' feature_list_star '}' ';'

    TYPEID  shift, and go to state 5


State 2

    0 $accept: program • $end

    $end  shift, and go to state 6


State 3

    1 program: class_list •
    3 class_list: class_list • class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 7


State 4

    2 class_list: class •

    $default  reduce using rule 2 (class_list)


State 5

    4 class: CLASS TYPEID • '{' feature_list_star '}' ';'
    5      | CLASS TYPEID • INHERITS TYPEID '{' feature_list_star '}' ';'

    INHERITS  shift, and go to state 8
    '{'       shift, and go to state 9


State 6

    0 $accept: program $end •

    $default  accept


State 7

    3 class_list: class_list class •

    $default  reduce using rule 3 (class_list)


State 8

    5 class: CLASS TYPEID INHERITS • TYPEID '{' feature_list_star '}' ';'

    TYPEID  shift, and go to state 10


State 9

    4 class: CLASS TYPEID '{' • feature_list_star '}' ';'

    $default  reduce using rule 6 (feature_list_star)

    feature_list_star  go to state 11


State 10

    5 class: CLASS TYPEID INHERITS TYPEID • '{' feature_list_star '}' ';'

    '{'  shift, and go to state 12


State 11

    4 class: CLASS TYPEID '{' feature_list_star • '}' ';'
    7 feature_list_star: feature_list_star • feature_single ';'

    OBJECTID  shift, and go to state 13
    '}'       shift, and go to state 14

    feature_single  go to state 15


State 12

    5 class: CLASS TYPEID INHERITS TYPEID '{' • feature_list_star '}' ';'

    $default  reduce using rule 6 (feature_list_star)

    feature_list_star  go to state 16


State 13

    8 feature_single: OBJECTID • '(' ')' ':' TYPEID '{' expression_single '}'
    9               | OBJECTID • '(' formal_single formal_list_star ')' ':' TYPEID '{' expression_single '}'
   10               | OBJECTID • ':' TYPEID
   11               | OBJECTID • ':' TYPEID ASSIGN expression_single

    '('  shift, and go to state 17
    ':'  shift, and go to state 18


State 14

    4 class: CLASS TYPEID '{' feature_list_star '}' • ';'

    ';'  shift, and go to state 19


State 15

    7 feature_list_star: feature_list_star feature_single • ';'

    ';'  shift, and go to state 20


State 16

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list_star • '}' ';'
    7 feature_list_star: feature_list_star • feature_single ';'

    OBJECTID  shift, and go to state 13
    '}'       shift, and go to state 21

    feature_single  go to state 15


State 17

    8 feature_single: OBJECTID '(' • ')' ':' TYPEID '{' expression_single '}'
    9               | OBJECTID '(' • formal_single formal_list_star ')' ':' TYPEID '{' expression_single '}'

    OBJECTID  shift, and go to state 22
    ')'       shift, and go to state 23

    formal_single  go to state 24


State 18

   10 feature_single: OBJECTID ':' • TYPEID
   11               | OBJECTID ':' • TYPEID ASSIGN expression_single

    TYPEID  shift, and go to state 25


State 19

    4 class: CLASS TYPEID '{' feature_list_star '}' ';' •

    $default  reduce using rule 4 (class)


State 20

    7 feature_list_star: feature_list_star feature_single ';' •

    $default  reduce using rule 7 (feature_list_star)


State 21

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list_star '}' • ';'

    ';'  shift, and go to state 26


State 22

   14 formal_single: OBJECTID • ':' TYPEID

    ':'  shift, and go to state 27


State 23

    8 feature_single: OBJECTID '(' ')' • ':' TYPEID '{' expression_single '}'

    ':'  shift, and go to state 28


State 24

    9 feature_single: OBJECTID '(' formal_single • formal_list_star ')' ':' TYPEID '{' expression_single '}'

    $default  reduce using rule 12 (formal_list_star)

    formal_list_star  go to state 29


State 25

   10 feature_single: OBJECTID ':' TYPEID •
   11               | OBJECTID ':' TYPEID • ASSIGN expression_single

    ASSIGN  shift, and go to state 30

    $default  reduce using rule 10 (feature_single)


State 26

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list_star '}' ';' •

    $default  reduce using rule 5 (class)


State 27

   14 formal_single: OBJECTID ':' • TYPEID

    TYPEID  shift, and go to state 31


State 28

    8 feature_single: OBJECTID '(' ')' ':' • TYPEID '{' expression_single '}'

    TYPEID  shift, and go to state 32


State 29

    9 feature_single: OBJECTID '(' formal_single formal_list_star • ')' ':' TYPEID '{' expression_single '}'
   13 formal_list_star: formal_list_star • ',' formal_single

    ')'  shift, and go to state 33
    ','  shift, and go to state 34


State 30

   11 feature_single: OBJECTID ':' TYPEID ASSIGN • expression_single

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    FOR         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    let_begin          go to state 50
    for_begin          go to state 51
    expression_single  go to state 52


State 31

   14 formal_single: OBJECTID ':' TYPEID •

    $default  reduce using rule 14 (formal_single)


State 32

    8 feature_single: OBJECTID '(' ')' ':' TYPEID • '{' expression_single '}'

    '{'  shift, and go to state 53


State 33

    9 feature_single: OBJECTID '(' formal_single formal_list_star ')' • ':' TYPEID '{' expression_single '}'

    ':'  shift, and go to state 54


State 34

   13 formal_list_star: formal_list_star ',' • formal_single

    OBJECTID  shift, and go to state 22

    formal_single  go to state 55


State 35

   40 expression_single: IF • expression_single THEN expression_single ELSE expression_single FI

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    FOR         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    let_begin          go to state 50
    for_begin          go to state 51
    expression_single  go to state 56


State 36

   21 let_begin: LET • OBJECTID ':' TYPEID let_expand
   22          | LET • OBJECTID ':' TYPEID ASSIGN expression_single let_expand

    OBJECTID  shift, and go to state 57


State 37

   41 expression_single: WHILE • expression_single LOOP expression_single POOL

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    FOR         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    let_begin          go to state 50
    for_begin          go to state 51
    expression_single  go to state 58


State 38

   45 expression_single: CASE • expression_single OF case_list_pos ESAC

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    FOR         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    let_begin          go to state 50
    for_begin          go to state 51
    expression_single  go to state 59


State 39

   46 expression_single: NEW • TYPEID

    TYPEID  shift, and go to state 60


State 40

   47 expression_single: ISVOID • expression_single

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    FOR         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    let_begin          go to state 50
    for_begin          go to state 51
    expression_single  go to state 61


State 41

   60 expression_single: STR_CONST •

    $default  reduce using rule 60 (expression_single)


State 42

   59 expression_single: INT_CONST •

    $default  reduce using rule 59 (expression_single)


State 43

   61 expression_single: BOOL_CONST •

    $default  reduce using rule 61 (expression_single)


State 44

   33 expression_single: OBJECTID • ASSIGN expression_single
   38                  | OBJECTID • '(' ')'
   39                  | OBJECTID • '(' expression_single expression_list_star ')'
   58                  | OBJECTID •

    ASSIGN  shift, and go to state 62
    '('     shift, and go to state 63

    $default  reduce using rule 58 (expression_single)


State 45

   56 expression_single: NOT • expression_single

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    FOR         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    let_begin          go to state 50
    for_begin          go to state 51
    expression_single  go to state 64


State 46

   27 for_begin: FOR • '(' OBJECTID ':' TYPEID for_expand
   28          | FOR • '(' OBJECTID ':' TYPEID ASSIGN expression_single for_expand

    '('  shift, and go to state 65


State 47

   52 expression_single: '~' • expression_single

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    FOR         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    let_begin          go to state 50
    for_begin          go to state 51
    expression_single  go to state 66


State 48

   42 expression_single: '{' • expression_list_pos '}'

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    FOR         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    let_begin            go to state 50
    for_begin            go to state 51
    expression_list_pos  go to state 67
    expression_single    go to state 68


State 49

   57 expression_single: '(' • expression_single ')'

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    FOR         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    let_begin          go to state 50
    for_begin          go to state 51
    expression_single  go to state 69


State 50

   43 expression_single: let_begin •

    $default  reduce using rule 43 (expression_single)


State 51

   44 expression_single: for_begin •

    $default  reduce using rule 44 (expression_single)


State 52

   11 feature_single: OBJECTID ':' TYPEID ASSIGN expression_single •
   34 expression_single: expression_single • '.' OBJECTID '(' ')'
   35                  | expression_single • '.' OBJECTID '(' expression_single expression_list_star ')'
   36                  | expression_single • '@' TYPEID '.' OBJECTID '(' ')'
   37                  | expression_single • '@' TYPEID '.' OBJECTID '(' expression_single expression_list_star ')'
   48                  | expression_single • '+' expression_single
   49                  | expression_single • '-' expression_single
   50                  | expression_single • '*' expression_single
   51                  | expression_single • '/' expression_single
   53                  | expression_single • '<' expression_single
   54                  | expression_single • LE expression_single
   55                  | expression_single • '=' expression_single

    LE   shift, and go to state 70
    '<'  shift, and go to state 71
    '='  shift, and go to state 72
    '+'  shift, and go to state 73
    '-'  shift, and go to state 74
    '*'  shift, and go to state 75
    '/'  shift, and go to state 76
    '@'  shift, and go to state 77
    '.'  shift, and go to state 78

    $default  reduce using rule 11 (feature_single)


State 53

    8 feature_single: OBJECTID '(' ')' ':' TYPEID '{' • expression_single '}'

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    FOR         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    let_begin          go to state 50
    for_begin          go to state 51
    expression_single  go to state 79


State 54

    9 feature_single: OBJECTID '(' formal_single formal_list_star ')' ':' • TYPEID '{' expression_single '}'

    TYPEID  shift, and go to state 80


State 55

   13 formal_list_star: formal_list_star ',' formal_single •

    $default  reduce using rule 13 (formal_list_star)


State 56

   34 expression_single: expression_single • '.' OBJECTID '(' ')'
   35                  | expression_single • '.' OBJECTID '(' expression_single expression_list_star ')'
   36                  | expression_single • '@' TYPEID '.' OBJECTID '(' ')'
   37                  | expression_single • '@' TYPEID '.' OBJECTID '(' expression_single expression_list_star ')'
   40                  | IF expression_single • THEN expression_single ELSE expression_single FI
   48                  | expression_single • '+' expression_single
   49                  | expression_single • '-' expression_single
   50                  | expression_single • '*' expression_single
   51                  | expression_single • '/' expression_single
   53                  | expression_single • '<' expression_single
   54                  | expression_single • LE expression_single
   55                  | expression_single • '=' expression_single
